# lrzhs

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  lrzhs.cabal
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: Lrzhs.hs
src/Lrzhs/: Ffi.hs  Types.hs
