cabal-version:      3.0
name:               lrzhs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kris Nuttycombe
maintainer:         kris@nutty.land

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md, rust/target/Headers/lrzhs_ffi.h

library
    build-depends:    
      base             >= 4.16.4.0,
      text             >= 1.2.5 && < 1.3
    hs-source-dirs:   src

    default-language: Haskell2010
    default-extensions:
      GADTs,
      LambdaCase,
      KindSignatures,
      MultiParamTypeClasses,
      OverloadedStrings,
      RankNTypes,
      TupleSections,
      TypeApplications
    
    exposed-modules:
      Lrzhs,
      Lrzhs.Types
    other-modules:
      Lrzhs.Ffi
    extra-libraries:
      lrzhs_ffi
    include-dirs: rust/target/Headers
    includes: rust/target/Headers/lrzhs_ffi.h
